# EASY_TRIGGER

./: .gitignore  CMakeLists.txt  CMakePresets.json  OPTIMIZATION_PLAN.md  README.md  build_mac.sh  build_win.ps1  installer_trigger.iss  run_juce_only.bat  run_juce_test.bat  version.iss
.github/: release-notes.md
.github/workflows/: release.yml
Fonts/: README.md
Help/: easy_trigger_help.html
Icon/: Icon Trigger.icns  Icon_mac.icns
Source/: App.cpp  App.h  AppIcon.rc  Main.cpp  MainWindow.cpp  MainWindow.h  TriggerMainWindow.cpp  TriggerMainWindow.h
Source/core/: BridgeVersion.h  ClockState.cpp  ClockState.h  ConfigStore.cpp  ConfigStore.h  Timecode.cpp  Timecode.h  TriggerConfigIO.cpp  Version.h.in
Source/engine/: BridgeEngine.cpp  BridgeEngine.h  OscInput.cpp  OscInput.h  ResolumeClipCollector.cpp  ResolumeClipCollector.h
Source/engine/inputs/: ArtnetInput.h  LtcInput.h  MtcInput.h  OscInput.h
Source/engine/outputs/: ArtnetOutput.h  AudioThruOutput.h  LtcOutput.h  MtcOutput.h
Source/engine/timecode/: EngineArtnetInput.h  EngineAudioThru.h  EngineLtcOutput.h  EngineMtcInput.h  EngineMtcOutput.h  EngineNetworkUtils.h
Source/trigger/: CustomTriggerState.h  TriggerCustomCRUD.cpp
Source/ui/: TriggerMenuHandlers.cpp
Source/ui/components/: SettingsPanelComponent.h  StatusBarComponent.h
Source/ui/monitoring/: OscLog.h
Source/ui/style/: StyleHelpers.h  TriggerColours.h  TriggerLookAndFeel.h
Source/ui/updates/: UpdateChecker.h  UpdateInstaller.h
Source/ui/widgets/: CircleButtons.h  DotToggle.h  LevelMeter.h  MacSwitch.h  TableCells.h  TrayIcon.h
Source/ui/windows/: AboutWindow.h  ColourPickerWindow.h  CustomTriggerEditPopup.h  DarkDialog.h  GetClipsOptionsWindow.h  NativeWindowUtils.h  PreferencesWindow.h  SaveConfigOptionsWindow.h  StatusMonitorWindow.h  UpdatePromptWindow.h
Source/ui/workers/: AudioScanThread.h
cmake/: AppIcon.rc.in  GenerateIconsFromPng.cmake  patch_macos_icon.cmake  set_dmg_icon.py
